# mindpalace

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
integrations/claude/.claude-plugin/: marketplace.json
integrations/claude/mindpalace/.claude-plugin/: plugin.json
integrations/claude/mindpalace/hooks/: hooks.json  session_start.sh  stop_nudge.sh
integrations/claude/mindpalace/skills/mindpalace/: SKILL.md
src/: backfill.rs  hook.rs  init.rs  main.rs  paths.rs  share.rs  star.rs  upgrade.rs  util.rs  wiki.rs
templates/: README.md  index.md
